--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   </style>
 </head>
 <body>
-  <h1>Générateur de QR Code chill wesh</h1>
+  <h1>Générateur de QR Code</h1>
 
   <form id="qrForm">
     <input type="text" id="prenom" placeholder="Prénom" required autocomplete="off" />
